cabal-version:   3.16
name:            calculator
version:         0.1.0.0
license:         NONE
author:          andrepdf
maintainer:      pfandre27@gmail.com
build-type:      Simple

common warnings
    ghc-options: -Wall

executable calculator
    import:           warnings
    main-is:          Main.hs
    other-modules:    Syntax, Parser, Compiler, Interpreter, Test
    hs-source-dirs:   src
    c-sources:        src/Interpreter.c
    build-depends:    base, haskeline, QuickCheck
    default-language: Haskell2010
